Bug 1427542 - Fix reset a form can't clear -moz-ui-invalid after calling reportValidity. r=smaug